# bullfrog

./: README.md  bullfrog.code-workspace  package.json
.circleci/: config.yml
bfr/: .gitignore  firebase.json  firestore.rules
bfr/bfr-app/: .gitignore  README.md  firebase.json  firestore.rules  package.json
bfr/bookmarks-sync/: .firebaserc  .gitignore  README.md  activate_venv  activate_venv.sh  fetch_bookmarks.py  firebase_app.py  firestore_database.py  fixture_page_1.html  full_response.json  login_pocket.py  main.py  pocket_bookmarks.py  requirements.txt  setup_venv  setup_venv.sh  single_bookmark.json  test.sh  test_fetch_resource.py  test_firestore_database.py  test_pocket_bookmarks.py
bfr/deploy/: README.md  main.tf  terraform.tfstate
bfr/ingest-gcf/: .gitignore  Pipfile  README.md  main.py  mypy.ini  pyproject.toml  pyrightconfig.json
bfr/ingest-gcf/bookmarks_sync/: firebase_app.py  firestore_database.py  pocket_bookmarks.py
bfr/ingest-gcf/ingest_gcf/: main.py
bfr/ingest-gcf/ingest_gcf/bookmarks_sync/: pocket_bookmarks.py
bfr/ingest-gcf/src/bookmarks_sync/: pocket_bookmarks.py  test_firestore_database.py
bfr/ingest-gcf/src/tools/: update_user.py
bfr/ingest-gcf/tests/: test_firestore_database.py  test_pocket_bookmarks.py
bfr/ingest-gcf/tests/resources/: test-project-4abbf-199fc0e689ec.json
bfr/ingest-gcf/tools/: login_pocket.py  update_user.py
kmgmt/kmgmt-app/: .env  .env.admin  .firebaserc  README.md  (+2 more)
threads-analysis/: .gitignore
village/: .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules
(+308 files in other folders)
