[tool.poetry]
name = "ingest-gcf"
version = "0.1.0"
description = "Google Cloud Functions package for article ingest pipeline"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.0.2"
pocket = "0.3.6"
firebase-admin = "4.4.0"
requests = "^2.24.0"
newspaper3k = "^0.2.8"
dict-deep = "^4.1.2"
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-watch = "^4.2.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [ "tests" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
